fix: address CodeRabbit review findings
Critical fixes:
- Fix debounce channel-close path dropping in-window upserts
  (flushPending → flushAllPending)
- Fix debounce timer re-arm race when flushInterval < debounceWindow
  (add ready flag to pendingChange, eliminate timer re-arm cycle)
- Fix watcher Stop() race with concurrent informer callbacks
  (don't close Events channel, guard emit() with stopCh)

Regression tests for all three bugs:
- TestDebounce_ChannelCloseFlushesAllPending
- TestDebounce_FlushDoesNotRearmTimers
- TestEmit_AfterStopDoesNotPanic

Other improvements from review:
- Upgrade golangci-lint to v2.10.1 (Go 1.26 binary support)
- Remove logcheck custom plugin (incompatible with CI binary mode)
- Fix devcontainer Go 1.25 → 1.26 to match go.mod
- Scope CI push triggers to main, add permissions blocks
- Add go mod tidy drift check in test workflow
- Increase terminationGracePeriodSeconds 10s → 30s (configurable via Helm)
- Validate WithRetry parameters in REST client
- Fix default restEndpoint (localhost invalid in-pod)
- Fix AGENTS.md formatting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,12 +2,15 @@ name: Lint
 
 on:
   push:
+    branches: [main]
   pull_request:
 
 jobs:
   lint:
     name: Run on Ubuntu
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Clone the code
         uses: actions/checkout@v4
@@ -18,7 +21,6 @@ jobs:
           go-version-file: go.mod
 
       - name: Run linter
-        uses: golangci/golangci-lint-action@v8
+        uses: golangci/golangci-lint-action@v9
         with:
-          version: v2.8.0
-          install-mode: goinstall
+          version: v2.10.1
