--- a/charts/k8s-vectordb-sync/templates/deployment.yaml
+++ b/charts/k8s-vectordb-sync/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
       serviceAccountName: {{ include "k8s-vectordb-sync.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      terminationGracePeriodSeconds: 10
+      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds | default 30 }}
       containers:
         - name: manager
           image: {{ include "k8s-vectordb-sync.image" . }}
