test: add integration test tier for pipeline coverage
Add 4 integration tests that wire DebounceBuffer + RESTClient together
with a real httptest server (no mocks):
- Full pipeline event flow through debounce to HTTP
- Delete events bypass debounce and arrive immediately
- Rapid updates to same resource: last-state-wins end-to-end
- Graceful shutdown drains in-flight payloads

Add make test-integration target and CI workflow step.
Update CLAUDE.md testing strategy to explicitly list all three
required test tiers with their commands.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,11 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Running Tests
+      - name: Running Unit Tests
         run: |
           go mod tidy
           git diff --exit-code go.mod go.sum
           make test
+
+      - name: Running Integration Tests
+        run: make test-integration
