--- a/config/default/manager_metrics_patch.yaml
+++ b/config/default/manager_metrics_patch.yaml
@@ -1,4 +1,10 @@
-# This patch adds the args to allow exposing the metrics endpoint using HTTPS
+# This patch adds the args and port to allow exposing the metrics endpoint using HTTPS
 - op: add
   path: /spec/template/spec/containers/0/args/0
   value: --metrics-bind-address=:8443
+- op: add
+  path: /spec/template/spec/containers/0/ports/-
+  value:
+    name: metrics
+    containerPort: 8443
+    protocol: TCP
