fix: address CodeRabbit review feedback and add observability docs
- Pin logtools plugin to v0.10.1 for deterministic builds
- Add Makefile clean target for build artifacts
- Add HTTP client timeout (5s) to E2E mock server helpers
- Propagate context cancellation to watcher WaitForCacheSync
- Fix test utils Run(): handle GetProjectDir error, remove os.Chdir,
  preserve caller-provided cmd.Env
- Fix pipeline script summary to track delete verification result
- Add ClusterRoleBinding cleanup in E2E AfterAll
- Add observability section to README (metrics endpoint, ServiceMonitor,
  health probes)

--- a/.custom-gcl.yml
+++ b/.custom-gcl.yml
@@ -8,4 +8,4 @@ plugins:
   # logcheck validates structured logging calls and parameters (e.g., balanced key-value pairs)
   - module: "sigs.k8s.io/logtools"
     import: "sigs.k8s.io/logtools/logcheck/gclplugin"
-    version: latest
+    version: v0.10.1
