ci: skip arm64 Docker build on PRs to speed up CI
PRs only build linux/amd64 (~30s) to validate the Dockerfile.
Full multi-arch (amd64 + arm64) builds run on merge to main and
tags when the image is actually pushed to the registry.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,8 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          # PRs: build amd64 only (fast validation). Main/tags: full multi-arch build for registry.
+          platforms: ${{ github.event_name == 'pull_request' && 'linux/amd64' || 'linux/amd64,linux/arm64' }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
