feat(prd-5): implement M1 - endpoint rename and CRD event detection
- Rename REST_ENDPOINT → INSTANCES_ENDPOINT across codebase (config,
  main, Helm chart, NOTES.txt, e2e tests, pipeline script, README)
- Add CAPABILITIES_ENDPOINT config env var (default empty = disabled)
- Implement CRD event detection with IsCRD() function and CrdEvents
  channel routing in watcher
- CRD add/delete events route to CrdEvents, updates are ignored per
  PRD design decision
- Add customresourcedefinitions to EXCLUDE_RESOURCE_TYPES defaults
- Add 9 unit tests covering IsCRD identification, CRD name extraction,
  event routing (add/delete/update), and emitCrd safety

Progress: 25% complete - M1 done, next is M2 (debounce/batch/REST client)

--- a/charts/k8s-vectordb-sync/templates/deployment.yaml
+++ b/charts/k8s-vectordb-sync/templates/deployment.yaml
@@ -41,8 +41,10 @@ spec:
             - --leader-elect
             {{- end }}
           env:
-            - name: REST_ENDPOINT
-              value: {{ .Values.config.restEndpoint | quote }}
+            - name: INSTANCES_ENDPOINT
+              value: {{ .Values.config.instancesEndpoint | quote }}
+            - name: CAPABILITIES_ENDPOINT
+              value: {{ .Values.config.capabilitiesEndpoint | quote }}
             - name: DEBOUNCE_WINDOW_MS
               value: {{ .Values.config.debounceWindowMs | quote }}
             - name: BATCH_FLUSH_INTERVAL_MS
