fix: address CodeRabbit review findings across all severity levels
Critical:
- Route CRDs to CrdEvents (not Events) during TriggerResync
- Make CRD delete events block in emitCrd to guarantee delivery

Important:
- Add componentstatuses to default exclusion list (config, Helm, README)
- Add migration note for REST_ENDPOINT rename in README
- Fix stale added/deleted terminology in PRD doc

Nitpick:
- Extract newCRDTestWatcher helper in watcher tests
- Extract verifyControllerRunning helper in e2e tests
- Consolidate duplicate HTTP clients in e2e tests
- Upgrade dropped payload log from Info to Error
- Fix validate.sh: trap runs cleanup, label-select controller deploy,
  partial coverage now fails
- Capture sender goroutine done channel in integration test
- Assert exact default exclusion list in config test
- Add test for CRD delete blocking behavior in emitCrd

--- a/charts/k8s-vectordb-sync/values.yaml
+++ b/charts/k8s-vectordb-sync/values.yaml
@@ -27,7 +27,7 @@ config:
   # Comma-separated resource types to watch (empty = all discoverable)
   watchResourceTypes: ""
   # Comma-separated resource types to exclude
-  excludeResourceTypes: "events,leases,endpointslices,customresourcedefinitions"
+  excludeResourceTypes: "events,leases,endpointslices,componentstatuses,customresourcedefinitions"
   # Bind address for the API server (resync trigger endpoint)
   apiBindAddress: ":8082"
   # Logging verbosity
